include_directories(include)
file(COPY ./include/ DESTINATION ${PROJECT_INCLUDE_DIR})
FILE (GLOB_RECURSE HISTOGRAPHS_SRC_FILES ./source/*)
ADD_LIBRARY(Histographs STATIC ${HISTOGRAPHS_SRC_FILES} )
TARGET_LINK_LIBRARIES(Histographs ${ROOT_LIBRARIES})
INSTALL( TARGETS Histographs LIBRARY DESTINATION ${LIBRARY_OUTPUT_PATH} ARCHIVE DESTINATION ${LIBRARY_OUTPUT_PATH})

